compleated project with fastapi app

--- a/notebooks/02_Vector_search.ipynb
+++ b/notebooks/02_Vector_search.ipynb
@@ -296,12 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e98dc55a-383a-419d-933c-10a275024506",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = TextLoader(\"./data/processed/tagged_description.txt\", encoding=\"utf-8\")\n",
+    "loader = TextLoader(\n",
+    "    \"./data/processed/tagged_description.txt\", encoding=\"utf-8\")\n",
     "raw_documents = loader.load()"
    ]
   },
